--- a/index.html
+++ b/index.html
@@ -182,75 +182,73 @@
 		}
 
 		{
-			const light = new THREE.SpotLight(0xFFFFFF, 1, 250, PI / 2.7, 1);
+			const light = new THREE.SpotLight(0xFFFFFF, 1.25, 250, PI / 2.7, .75);
 			light.position.set(30, 70, 0);
 			light.target.position.set(30, 0, 0);
 			light.castShadow = light.receiveShadow = true;
-			light.shadow.mapSize.set(1536, 1536);
-			light.shadow.normalBias = 0.1;
+			light.shadow.mapSize.set(1024, 1024);
+			light.shadow.normalBias = 0.2;
 			scene.add(light);
 			scene.add(light.target);
 		}
 
 		//"Living Room Chair" (https://skfb.ly/6VnuU) by Qu3st10n is licensed under CC Attribution-NonCommercial-NoDerivs (http://creativecommons.org/licenses/by-nc-nd/4.0/).
-		loadGLTF('https://dl.dropbox.com/s/9qnk53ie5rne8lb/chair.glb', 16, 0.15, 0.5, 0, 0, 0, 5, 5, 5);
-		loadGLTF('https://dl.dropbox.com/s/9qnk53ie5rne8lb/chair.glb', 0, 0.15, -81.5, 0, PI, 0, 5, 5, 5);
-		loadGLTF('https://dl.dropbox.com/s/9qnk53ie5rne8lb/chair.glb', -33.5, 0.15, -32, 0, -PI / 2, 0, 5, 5, 5);
-		loadGLTF('https://dl.dropbox.com/s/9qnk53ie5rne8lb/chair.glb', 49.5, 0.15, -48, 0, PI / 2, 0, 5, 5, 5);
+		loadGLTF('https://dl.dropbox.com/s/8umwnjheb2e5nkf/chair.glb', 16, 0.15, 0.5, 0, 0, 0, 5, 5, 5);
+		loadGLTF('https://dl.dropbox.com/s/8umwnjheb2e5nkf/chair.glb', 0, 0.15, -81.5, 0, PI, 0, 5, 5, 5);
+		loadGLTF('https://dl.dropbox.com/s/8umwnjheb2e5nkf/chair.glb', -33.5, 0.15, -32, 0, -PI / 2, 0, 5, 5, 5);
+		loadGLTF('https://dl.dropbox.com/s/8umwnjheb2e5nkf/chair.glb', 49.5, 0.15, -48, 0, PI / 2, 0, 5, 5, 5);
 
-		loadGLTF('https://dl.dropbox.com/s/4221vim6zxc3dzm/pic.glb', 50, 15, -85, 0, -PI / 2, 0, 30, 30, 30, false, true, true, .5, 0);
+		loadGLTF('https://dl.dropbox.com/s/ykxcsto7jca2s4o/pic.glb', 50, 15, -85, 0, -PI / 2, 0, 30, 30, 30, false, true, true, .5, 0);
 
-		loadGLTF('https://dl.dropbox.com/s/hikxktujpo2yhd8/chandelier.glb', 30, 63, -5, 0, 0, 0, 30, 30, 30, false, true);
+		loadGLTF('https://dl.dropbox.com/s/fnskgv6rt5ohnia/chandelier.glb', 30, 63, -5, 0, 0, 0, 30, 30, 30, false, true);
 
-		loadGLTF('https://dl.dropbox.com/s/u4w4ye6h81t7bug/plant.glb', 83, 0, -100, 0, -PI / 2, 0, 80, 80, 80, true, true);
+		loadGLTF('https://dl.dropbox.com/s/9n78a3jlxlsw4cg/plant.glb', 83, 0, -100, 0, -PI / 2, 0, 80, 80, 80, true, true);
 
 		//"Jalousie Doors" (https://skfb.ly/6RNDT) by dm3V is licensed under Creative Commons Attribution (http://creativecommons.org/licenses/by/4.0/).
-		loadGLTF('https://dl.dropbox.com/s/v49hobiyetd559h/Jalousie.glb', 4.2, 2.15, -126, 0, 0, 0, 5.3, 5.3, 5.3, false, true);
+		loadGLTF('https://dl.dropbox.com/s/6twbhw521ehkrc3/Jalousie.glb', 4.2, 2.15, -126, 0, 0, 0, 5.3, 5.3, 5.3, false, true);
 
-		loadGLTF('https://dl.dropbox.com/s/3g42c4vvol6u9rs/sofa.glb', -15.1, 0, 42, 0, PI / 36, 0, 210, 210, 210, true, true);
+		loadGLTF('https://dl.dropbox.com/s/wj482vdtq20lt98/sofa.glb', -15.1, 0, 42, 0, PI / 36, 0, 210, 210, 210, true, true);
 
-		loadGLTF('https://dl.dropbox.com/s/2fr6jpyscobd7io/flowers.glb', -24, 0, 0, 0, 0, 0, 30, 30, 30, true, true);
+		loadGLTF('https://dl.dropbox.com/s/d8hq7dcrafw7m04/statue.glb', 91, 32.3, 10, 0, -PI / 2, 0, 3, 3, 3, true, true);
 
-		loadGLTF('https://dl.dropbox.com/s/uyfxv2hjc2943dc/statue.glb', 91, 32.3, 10, 0, -PI / 2, 0, 3, 3, 3, true, true);
+		loadGLTF('https://dl.dropbox.com/s/wr8tbpebl3wdhgo/armchair.glb', 23, 0, 62, 0, -PI / 1.2, 0, 15, 15, 15);
+		loadGLTF('https://dl.dropbox.com/s/wr8tbpebl3wdhgo/armchair.glb', 23, 0, 19, 0, -PI / 6, 0, 15, 15, 15);
 
-		loadGLTF('https://dl.dropbox.com/s/opsdeevxyo0xj83/armchair.glb', 23, 0, 62, 0, -PI / 1.2, 0, 15, 15, 15);
-		loadGLTF('https://dl.dropbox.com/s/opsdeevxyo0xj83/armchair.glb', 23, 0, 19, 0, -PI / 6, 0, 15, 15, 15);
+		loadGLTF('https://dl.dropbox.com/s/l1rs0boz0y6vjtw/baseboard_small.glb', 89.2, 0, 124.71, 0, PI, 0, 9.58, 10, 10, false, true, true);
+		loadGLTF('https://dl.dropbox.com/s/l1rs0boz0y6vjtw/baseboard_small.glb', -29.2, 0, -124.71, 0, 0, 0, 9.58, 10, 10, false, true, true);
+		loadGLTF('https://dl.dropbox.com/s/igxeuefnwh24qwa/baseboard_big.glb', -34.715, 0, 119.1, 0, PI / 2, 0, 9.65, 10, 10, false, true, true);
+		loadGLTF('https://dl.dropbox.com/s/igxeuefnwh24qwa/baseboard_big.glb', 94.7, 0, -119.1, 0, -PI / 2, 0, 9.65, 10, 10, false, true, true);
 
-		loadGLTF('https://dl.dropbox.com/s/xaqlx0l6v3h6mcf/baseboard_small.glb', 89.2, 0, 124.71, 0, PI, 0, 9.58, 10, 10, false, true, true);
-		loadGLTF('https://dl.dropbox.com/s/xaqlx0l6v3h6mcf/baseboard_small.glb', -29.2, 0, -124.71, 0, 0, 0, 9.58, 10, 10, false, true, true);
-		loadGLTF('https://dl.dropbox.com/s/zsiwfwcbqifgmk5/baseboard_big.glb', -34.715, 0, 119.1, 0, PI / 2, 0, 9.65, 10, 10, false, true, true);
-		loadGLTF('https://dl.dropbox.com/s/zsiwfwcbqifgmk5/baseboard_big.glb', 94.7, 0, -119.1, 0, -PI / 2, 0, 9.65, 10, 10, false, true, true);
-
-		loadGLTF('https://dl.dropbox.com/s/rzho3k8t7lz2hmf/cornice_big.glb', -34.2, 65.1, 113.9, 0, PI / 2, 0, .496, .496, .496, false, true);
-		loadGLTF('https://dl.dropbox.com/s/rzho3k8t7lz2hmf/cornice_big.glb', 94.2, 65.1, -113.9, 0, -PI / 2, 0, .496, .496, .496, false, true);
-		loadGLTF('https://dl.dropbox.com/s/z5q85wjx41l1v66/cornice_small.glb', 84.3, 65.1, 124.2, 0, PI, 0, .473, .496, .496, false, true);
-		loadGLTF('https://dl.dropbox.com/s/z5q85wjx41l1v66/cornice_small.glb', -24.3, 65.1, -124.2, 0, 0, 0, .473, .496, .496, false, true);
+		loadGLTF('https://dl.dropbox.com/s/hcd5loi3kme86tp/cornice_big.glb', -34.2, 65.1, 113.9, 0, PI / 2, 0, .496, .496, .496, false, true);
+		loadGLTF('https://dl.dropbox.com/s/hcd5loi3kme86tp/cornice_big.glb', 94.2, 65.1, -113.9, 0, -PI / 2, 0, .496, .496, .496, false, true);
+		loadGLTF('https://dl.dropbox.com/s/21a8egeg9g8kkc8/cornice_small.glb', 84.3, 65.1, 124.2, 0, PI, 0, .473, .496, .496, false, true);
+		loadGLTF('https://dl.dropbox.com/s/21a8egeg9g8kkc8/cornice_small.glb', -24.3, 65.1, -124.2, 0, 0, 0, .473, .496, .496, false, true);
 
 		//"wooden cupboard" (https://skfb.ly/o6S6H) by Ricardo Sanchez is licensed under Creative Commons Attribution (http://creativecommons.org/licenses/by/4.0/).
-		loadGLTF('https://dl.dropbox.com/s/necceuwz0zfxd1o/cupboard.glb', 10, 0, 117.1, 0, PI, 0, 35, 25, 30, true, true);
+		loadGLTF('https://dl.dropbox.com/s/4r178tjc5ysy0oy/cupboard.glb', 10, 0, 117.1, 0, PI, 0, 35, 25, 30, true, true);
 
-		loadGLTF('https://dl.dropbox.com/s/ap8c0cjlli48nxv/fireplace.glb', 90.1, 0.65, 0, 0, -PI / 2, 0, 30, 30, 30, true, true);
+		loadGLTF('https://dl.dropbox.com/s/9uqjl7rttrs8h07/fireplace.glb', 90.1, 0.65, 0, 0, -PI / 2, 0, 30, 30, 30, true, true);
 
-		loadGLTF('https://dl.dropbox.com/s/o3dyo0p2zhqdxfb/vase.glb', 91, 38.76, -5, 0, 0, 0, 30, 30, 30, true, false);
+		loadGLTF('https://dl.dropbox.com/s/6hhyqba0kh57r0d/vase.glb', 91, 38.76, -5, 0, 0, 0, 30, 30, 30, true, false);
 
-		loadGLTF('https://dl.dropbox.com/s/kqe7qq4t5uuhe8v/door.glb', -124.64, -23.6, 320, 0, PI / 2, 0, 22, 22, 22, false, true);
+		loadGLTF('https://dl.dropbox.com/s/9o1gfe9688mdld2/door.glb', -124.64, -23.6, 320, 0, PI / 2, 0, 22, 22, 22, true, true);
 
 		//"Day 2: Freshly Baked" (https://skfb.ly/6XNRp) by Katerina Novakova is licensed under Creative Commons Attribution (http://creativecommons.org/licenses/by/4.0/).
-		loadGLTF('https://dl.dropbox.com/s/n2it6mp3ulq4s18/cake.glb', 8, 14.43, -40, 0, PI / 2, 0, 5, 5, 5, true, true);
+		loadGLTF('https://dl.dropbox.com/s/97m3zry7r40ek28/cake.glb', 8, 14.43, -40, 0, PI / 2, 0, 5, 5, 5, true, true);
 
 		//"Plate" (https://skfb.ly/6tGUy) by joaoribeiromarques is licensed under Creative Commons Attribution (http://creativecommons.org/licenses/by/4.0/).
-		loadGLTF('https://dl.dropbox.com/s/0dnahsuy0x2prr2/plate.glb', 8, 14.4, -25, 0, 0, 0, 15, 15, 15);
-		loadGLTF('https://dl.dropbox.com/s/0dnahsuy0x2prr2/plate.glb', 8, 14.4, -55, 0, 0, 0, 15, 15, 15);
-		loadGLTF('https://dl.dropbox.com/s/0dnahsuy0x2prr2/plate.glb', -7, 14.4, -40, 0, 0, 0, 15, 15, 15);
-		loadGLTF('https://dl.dropbox.com/s/0dnahsuy0x2prr2/plate.glb', 23, 14.4, -40, 0, 0, 0, 15, 15, 15);
+		loadGLTF('https://dl.dropbox.com/s/u2l4dykjc7w5hvt/plate.glb', 8, 14.4, -25, 0, 0, 0, 15, 15, 15);
+		loadGLTF('https://dl.dropbox.com/s/u2l4dykjc7w5hvt/plate.glb', 8, 14.4, -55, 0, 0, 0, 15, 15, 15);
+		loadGLTF('https://dl.dropbox.com/s/u2l4dykjc7w5hvt/plate.glb', -7, 14.4, -40, 0, 0, 0, 15, 15, 15);
+		loadGLTF('https://dl.dropbox.com/s/u2l4dykjc7w5hvt/plate.glb', 23, 14.4, -40, 0, 0, 0, 15, 15, 15);
 
 		//"Pocolov Cake Donuts" (https://skfb.ly/6WUtI) by pocolov is licensed under Creative Commons Attribution (http://creativecommons.org/licenses/by/4.0/).
-		loadGLTF('https://dl.dropbox.com/s/wwpg6dfluflckm1/donuts.glb', 5.4, 15.06, -25, 0, 0, 0, 5, 5, 5);
-		loadGLTF('https://dl.dropbox.com/s/wwpg6dfluflckm1/donuts.glb', 10.6, 15.06, -55, 0, PI, 0, 5, 5, 5);
-		loadGLTF('https://dl.dropbox.com/s/wwpg6dfluflckm1/donuts.glb', -7, 15.06, -42.5, 0, -PI / 2, 0, 5, 5, 5);
-		loadGLTF('https://dl.dropbox.com/s/wwpg6dfluflckm1/donuts.glb', 23, 15.06, -37.5, 0, PI / 2, 0, 5, 5, 5);
+		loadGLTF('https://dl.dropbox.com/s/eu54nqeu7717nl5/donuts.glb', 5.4, 15.06, -25, 0, 0, 0, 5, 5, 5);
+		loadGLTF('https://dl.dropbox.com/s/eu54nqeu7717nl5/donuts.glb', 10.6, 15.06, -55, 0, PI, 0, 5, 5, 5);
+		loadGLTF('https://dl.dropbox.com/s/eu54nqeu7717nl5/donuts.glb', -7, 15.06, -42.5, 0, -PI / 2, 0, 5, 5, 5);
+		loadGLTF('https://dl.dropbox.com/s/eu54nqeu7717nl5/donuts.glb', 23, 15.06, -37.5, 0, PI / 2, 0, 5, 5, 5);
 
-		const fireTex = loadTexture('https://dl.dropbox.com/s/r6mhg3qzpf24bdi/fire_tex.jpg', () => {
+		const fireTex = loadTexture('https://dl.dropbox.com/s/eefnyjfhumn3mav/fire_tex.jpg', () => {
 			progress++;
 			updateProgress(progress);
 		});
@@ -258,7 +256,7 @@
 			map: fireTex
 		}), 88.4, 10, 0, 0, -PI / 2, 0, 1, 1, 1);
 
-		const carpetTex = loadTexture('https://dl.dropbox.com/s/unhz8pov5n5yamh/carpet_tex.jpg', () => {
+		const carpetTex = loadTexture('https://dl.dropbox.com/s/qb0165pb71ki63u/carpet_tex.jpg', () => {
 			progress++;
 			updateProgress(progress);
 		});
@@ -294,7 +292,7 @@
 		addMesh(new THREE.BoxBufferGeometry(70, 140, 0.2), carpetMaterials, 2, 0, 0, -PI / 2, 0, 0, 1, 1, 1, false, true);
 
 		const addTable = (x = 0, y = 0, z = 0, rX = 0, rY = 0, rZ = 0, sX = 1, sY = 1, sZ = 1) => {
-			const tableTex = loadTexture('https://dl.dropbox.com/s/voe9zb64nff30fg/tableTex.jpg', () => {
+			const tableTex = loadTexture('https://dl.dropbox.com/s/3uohcrev87t32w1/tableTex.jpg', () => {
 				progress++;
 				updateProgress(progress);
 			});
@@ -324,41 +322,41 @@
 
 		addTable(8, 0, -40);
 
-		const roomFrontSideTex1 = loadTexture('https://dl.dropbox.com/s/8cs5v95eywcy4gr/wall_tex.jpg', t => {
+		const roomFrontSideTex1 = loadTexture('https://dl.dropbox.com/s/msn5mxkz3kwtorv/wall_tex.jpg', t => {
 			setRepeatWrapping(t, [3, 3]);
 			progress++;
 			updateProgress(progress);
 			return null;
 		});
 
-		const roomFrontSideTex2 = loadTexture('https://dl.dropbox.com/s/8cs5v95eywcy4gr/wall_tex.jpg', t => {
+		const roomFrontSideTex2 = loadTexture('https://dl.dropbox.com/s/msn5mxkz3kwtorv/wall_tex.jpg', t => {
 			setRepeatWrapping(t, [1, 3]);
 			progress++;
 			updateProgress(progress);
 			return null;
 		});
 
-		const roomBackSideTex = loadTexture('https://dl.dropbox.com/s/8cs5v95eywcy4gr/wall_tex.jpg', t => {
+		const roomBackSideTex = loadTexture('https://dl.dropbox.com/s/msn5mxkz3kwtorv/wall_tex.jpg', t => {
 			setRepeatWrapping(t, [3, 6]);
 			progress++;
 			updateProgress(progress);
 		});
 
-		const wallLeftAndRightSideTex = loadTexture('https://dl.dropbox.com/s/8cs5v95eywcy4gr/wall_tex.jpg', t => {
+		const wallLeftAndRightSideTex = loadTexture('https://dl.dropbox.com/s/msn5mxkz3kwtorv/wall_tex.jpg', t => {
 			setRepeatWrapping(t, [6, 6]);
 			progress++;
 			updateProgress(progress);
 			return null;
 		});
 
-		const floorTex = loadTexture('https://dl.dropbox.com/s/xfnd52e6621atsq/floor_tex.png', t => {
+		const floorTex = loadTexture('https://dl.dropbox.com/s/udp3naw3zuwog81/floor_tex.png', t => {
 			setRepeatWrapping(t, [12, 24], THREE.MirroredRepeatWrapping);
 			progress++;
 			updateProgress(progress);
 			return null;
 		});
 
-		const ceilingTex = loadTexture('https://dl.dropbox.com/s/jqk3ntch1y1wluf/ceiling_texture.jpg', t => {
+		const ceilingTex = loadTexture('https://dl.dropbox.com/s/ajpthzpa0pzqauv/ceiling_texture.jpg', t => {
 			setRepeatWrapping(t, [4, 8], THREE.MirroredRepeatWrapping);
 			progress++;
 			updateProgress(progress);
@@ -442,18 +440,18 @@
 				clearInterval(timer);
 				render();
 
-				setTimeout(() => mainContainer.style.opacity = '0', 500);
-				setTimeout(() => canvas.style.filter = 'blur(0px)', 850);
+				setTimeout(() => mainContainer.style.opacity = '0', 750);
+				setTimeout(() => canvas.style.filter = 'blur(0px)', 1000);
 
 				setTimeout(() => {
 					mainContainer.style.display = 'none';
 					canvas.style.filter = 'none';
-				}, 1400);
+				}, 1700);
 
 				setTimeout(() => {
 					stats = new Stats();
 					document.body.append(stats.dom);
-				}, 1700);
+				}, 2000);
 			}
 		}, 50);
 	}
