--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
-    <title>3D Room...</title>
+    <title>3D Room</title>
+    <link rel="icon" href="https://dl.dropbox.com/s/xxwkbaj65vx4rtk/tea-party.png" />
     <link rel="stylesheet" type="text/css" href="style.css">
 
-        <!--
+      <!--
 
       ⁉️
 
@@ -28,7 +29,7 @@
         <!--
 
       Author: ★ Don’t Know ★
-      
+
     -->
 
   </head>
